--- a/index.html
+++ b/index.html
@@ -17,4 +17,8 @@
         <br><a href="https://https://www.facebook.com/profile.php?id=100065942557010&mibextid=ZbWKwL"><img src="img/Screenshot_5.png" alt="Facebook"></a> Este é o Facebook da Assistência Técnica
     
 </body>
+    <hr>
+    <article>
+        <li><a href="https://mkncastro.github.io/bomfuturo" target="_blank">Site com quadro de anúncios da congregação Bom Futuro</a></li>
+    </article>
 </html>
