--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         <br><a href="https://linkedin.com/in/marco-alexandre-79aa41293"><img src="img/Screenshot_4.png" alt="linkedin"></a> Me adiciona lá no Linkedin
         <br><a href="https://https://www.facebook.com/profile.php?id=100065942557010&mibextid=ZbWKwL"><img src="img/Screenshot_5.png" alt="Facebook"></a> Este é o Facebook da Assistência Técnica
     
-</body>
+
     <hr>
     <article>
         <li><a href="https://mkncastro.github.io/bomfuturo" target="_blank">Site com quadro de anúncios da congregação Bom Futuro</a></li>
+        <li><a href="https://mkncastro.github.io/Assistencia" target="_blank">Site da minha Assistencia técnica</a></li>
     </article>
+</body>
 </html>
