--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <hr>
     <article>
         <li><a href="https://mkncastro.github.io/bomfuturo" target="_blank">Site com quadro de anúncios da congregação Bom Futuro</a></li>
-        <li><a href="https://mkncastro.github.io/Assistencia" target="_blank">Site da minha Assistencia técnica</a></li>
+        <li><a href="https://mkncastro.github.io/assistencia" target="_blank">Site da minha Assistencia técnica</a></li>
     </article>
 </body>
 </html>
